--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,11 +34,11 @@ dependencies:
   # Câmera
   camera: ^0.11.3
 
-  # Salvar na galeria (álbuns)
-  image_gallery_saver: ^2.0.3
-
   # Compartilhar (share sheet / USB)
   share_plus: ^12.0.1
+
+  # Geolocalização
+  geolocator: 14.0.2
 
   # Acesso a diretórios temporários
   path_provider: ^2.1.5
@@ -46,8 +46,12 @@ dependencies:
   # Permissões em runtime
   permission_handler: ^12.0.1
 
-  # Listar fotos da galeria / filtros
+  # Listar fotos/filtros/Salvar na galeria (álbuns)
   photo_manager: ^3.8.3
+
+  # Mini mapa
+  flutter_map: 8.2.2
+  latlong2: 0.9.1
 
   # Banco de dados
   sqflite: 2.4.2
