Salvando progresso, progresso bom!
Galeria:
instalada as dependências photo_manager_provider
e flutter_staggered_grid_view
para cuidar da galeria
e photo_view para cuidar de quando clicar na foto expandir e usar zoom...
O que falta seria filtrar essa fotos.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,6 +55,9 @@ dependencies:
 
   # Listar fotos/filtros/Salvar na galeria (álbuns)
   photo_manager: ^3.8.3
+  photo_manager_image_provider: 2.2.0
+  flutter_staggered_grid_view: ^0.7.0
+  photo_view: ^0.15.0
 
   # Mini mapa
   flutter_map: 8.2.2
